--- a/pom.xml
+++ b/pom.xml
@@ -8,15 +8,35 @@
 		<java.version>1.8</java.version>
 		<java.source>${java.version}</java.source>
 		<java.target>${java.version}</java.target>
-		<jackson.version>2.9.5</jackson.version>
+		<jackson.version>2.12.4</jackson.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-enforcer-plugin</artifactId>
+				<version>3.0.0-M3</version>
+				<executions>
+					<execution>
+						<id>enforce-maven</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<requireMavenVersion>
+									<version>3.5.0</version>
+								</requireMavenVersion>
+							</rules>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
+				<version>3.8.1</version>
 				<configuration>
 					<source>${java.source}</source>
 					<target>${java.target}</target>
@@ -24,7 +44,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.0.0-M1</version>
+				<version>3.3.0</version>
 				<configuration>
 					<destDir>docs</destDir>
 					<notimestamp>true</notimestamp>
@@ -48,7 +68,7 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
-			<version>1.16.20</version>
+			<version>1.18.20</version>
 		</dependency>
 	</dependencies>
 </project>
